--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,84 @@ article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,su
 a:focus{outline:thin dotted;}
 a:active,a:hover{outline:0;}h1{font-size:2em;margin:0;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:bold;}dfn{font-style:italic;}hr{-webkit-box-sizing:content-box;box-sizing:content-box;height:0;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace,serif;font-size:1em;}pre{white-space:pre-wrap;}q{quotes:"\201C" "\201D" "\2018" "\2019";}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-0.5em;}sub{bottom:-0.25em;}img{border:0;}svg:not(:root){overflow:hidden;}figure{margin:0;}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em;}legend{border:0;padding:0;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,select{text-transform:none;}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;}button[disabled],html input[disabled]{cursor:default;}input[type="checkbox"],input[type="radio"]{-webkit-box-sizing:border-box;box-sizing:border-box;padding:0;}input[type="search"]{-webkit-appearance:textfield;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none;}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}
 
+p {margin: 0}
+
 @font-face {
-    font-family: 'proxima_novaregular';
-    src: url('../fonts/proximanova-reg.eot');
-    src: url('../fonts/proximanova-reg.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/proximanova-reg.woff2') format('woff2'),
-         url('../fonts/proximanova-reg.woff') format('woff'),
-         url('../fonts/proximanova-reg.ttf') format('truetype');
+    font-family: 'Akrobat-Black';
+    src: url('../fonts/Akrobat-Black.eot');
+    src: url('../fonts/Akrobat-Black.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Akrobat-Black.woff') format('woff'),
+         url('../fonts/Akrobat-Black.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-
 }
 
+@font-face {
+    font-family: 'Akrobat-Bold';
+    src: url('../fonts/Akrobat-Bold.eot');
+    src: url('../fonts/Akrobat-Bold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Akrobat-Bold.woff') format('woff'),
+         url('../fonts/Akrobat-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Akrobat-Light';
+    src: url('../fonts/Akrobat-Light.eot');
+    src: url('../fonts/Akrobat-Light.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Akrobat-Light.woff') format('woff'),
+         url('../fonts/Akrobat-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Akrobat-Regular';
+    src: url('../fonts/Akrobat-Regular.eot');
+    src: url('../fonts/Akrobat-Regular.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Akrobat-Regular.woff') format('woff'),
+         url('../fonts/Akrobat-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Akrobat-SemiBold';
+    src: url('../fonts/Akrobat-SemiBold.eot');
+    src: url('../fonts/Akrobat-SemiBold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Akrobat-SemiBold.woff') format('woff'),
+         url('../fonts/Akrobat-SemiBold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'DrukTextWideCyr-Bold';
+    src: url('../fonts/DrukTextWideCyr-Bold.eot');
+    src: url('../fonts/DrukTextWideCyr-Bold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/DrukTextWideCyr-Bold.woff') format('woff'),
+         url('../fonts/DrukTextWideCyr-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'DrukTextWideCyr-Heavy';
+    src: url('../fonts/DrukTextWideCyr-Heavy.eot');
+    src: url('../fonts/DrukTextWideCyr-Heavy?#iefix') format('embedded-opentype'),
+         url('../fonts/DrukTextWideCyr-Heavy.woff') format('woff'),
+         url('../fonts/DrukTextWideCyr-Heavy.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 :focus{
     outline: 0 none;
 }
 
 
-body{margin:0;background-color: #000;color: #fff;background-image: url(../img/bg1.jpeg);background-size: auto 100vh;background-repeat: no-repeat;}
+body{margin:0; background-color:#000;color: #fff;background-image: url(../img/bg1.jpeg);background-size: auto 100vh;background-repeat: no-repeat;background-position: 0 0;background-attachment: fixed;}
 
 
 
@@ -41,28 +101,32 @@ body{margin:0;background-color: #000;color: #fff;background-image: url(../img/bg
 
 section{height: 100vh}
 
+.header{margin: 0 auto; width: 100%; max-width: 1320px; display:flex; justify-content: space-between;}
+h1{max-width: 520px; font-family: 'DrukTextWideCyr-Bold';font-size: 55px;line-height: 60px;text-align: center;letter-spacing: 0.015em;font-weight: 400;}
+#section1-h1{width: 272px;height: 55px;margin-bottom: -4px;margin-top: 70px;}
+#section-1{  text-align: center;display: flex;flex-direction: column;flex-wrap: nowrap;justify-content: space-between;align-items: center;align-content: stretch;}
+.logo-dogchow{ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill-rule='evenodd' stroke-linejoin='round' stroke-miterlimit='2' clip-rule='evenodd' viewBox='0 0 129 41'%3E%3Cpath fill='%23fefefe' d='M95 19.5c-2.6 0-7 1.4-7 10.7 0 4 .8 7 2.6 8.8a6.1 6.1 0 004.4 1.8c3.5 0 7.2-2.8 7.2-10.6 0-4.1-.9-7.1-2.6-8.9a6.2 6.2 0 00-4.6-1.8zM33.5 30.2c0 7.8-3.7 10.6-7.2 10.6-1.2 0-3-.3-4.5-1.8-1.7-1.8-2.6-4.7-2.6-8.8 0-9.3 4.5-10.7 7.1-10.7 1.3 0 3 .3 4.5 1.8 1.8 1.8 2.7 4.8 2.7 9zM5.4 40.7H.3v-2.4l1.8-.4V19l-1.8-.4v-2.5h7.9c2.5 0 4.5.8 6 2.4 2.6 2.6 3.2 6.8 3.2 9.8 0 4.2-1.1 9.5-6.2 11.7a10 10 0 01-3.7.7h-.1l-1.9-.6-.1.6zM68 36.8c-1 .3-2.2.6-3.3.6-.7 0-1.5-.2-2.2-.6-3.5-2-4-6.7-4-8.6 0-1.8.4-6.2 3.4-8.1a4 4 0 012.2-.7c.6 0 1.3 0 2 .2l.8 3.2 2.1-.4v-5l-.2-.2c-.2 0-2.2-1.1-4.7-1.1-3 0-5.6 1.2-7.4 3.6a14.5 14.5 0 00-2.4 8.6c0 4.1 1.1 9.5 6.6 11.7 1.2.5 2.5.7 3.9.7l1.8-.5a206.4 206.4 0 012.6-.9h.3l-.8-2.6-.7.1zm7.8 4h-5v-2.3l1.5-.3v-16l-1.6-.3v-2.2h5v8.5H82v-8.5h5v2.2l-1.6.3v16l1.6.3v2.2h-5V31h-6.1v9.8zm-31-.1h-.2c-.9 0-4-.2-6.3-2.6-1.8-1.9-2.7-4.6-2.7-8 0-3.7.9-6.5 2.7-8.3a8 8 0 015.7-2.2c2.3 0 4 1 4 1l.3.1v4.4l-2 .4-.6-2.8a13 13 0 00-1.7-.2c-1.9 0-4.7 2-4.7 7.5 0 3.4 1.2 5.3 2.2 6.3.9 1 2 1.4 3 1.4.2 0 .6 0 1.6-.3v-6.7l-2-.3V28h5.5v10.6l-4.9 2zm62.3-21l2.4 13.7L112 24l-.5-1.8-1.8-.4v-2.2h4.8l3.8 14.6 2.9-14.6h4.2v2.2l-1.7.4-3.7 18.5h-3.4L113.4 29l-2.9 11.6h-3L104 22.2l-1.6-.4v-2.2h4.8zM95 37.8c2 0 3.3-2.7 3.3-7.8 0-3.5-.6-5.9-1.7-7-.5-.5-1-.7-1.7-.7-2 0-3.3 2.9-3.3 7.7 0 3.6.6 6 1.6 7.1.5.5 1 .7 1.7.7zM26.2 22.4c.6 0 1.2.2 1.7.7 1 1.1 1.6 3.6 1.6 7 0 5-1.2 7.8-3.3 7.8-.7 0-1.2-.2-1.7-.7-1-1-1.6-3.5-1.6-7 0-4.9 1.2-7.8 3.3-7.8zM9.8 37c-.7.4-1.5.7-2.2.7-.6 0-1.1-.2-1.5-.3V19.2h2c.7 0 1.4.2 2 .7 2.7 1.9 3 6.5 3 8.3 0 2.5-.5 6.8-3.3 8.7zm116.8-16.7c0 .8.6 1.2 1.2 1.2s1.1-.4 1.1-1.2c0-.7-.5-1.1-1.1-1.1-.6 0-1.2.4-1.2 1.1zm1.2-.8c-.5 0-.8.3-.8.8 0 .6.3 1 .8 1 .4 0 .8-.4.8-1 0-.5-.4-.8-.8-.8zm0 .2c.3 0 .5.1.5.4 0 .2-.1.3-.3.3l.3.6h-.3l-.3-.6h-.1v.6h-.3v-1.3h.5zm0 .2h-.2v.3h.2l.2-.1c0-.2-.1-.2-.2-.2zm-64.2-8H0V.1h63.6v11.5zM65 2c0 1.1.8 1.7 1.7 1.7.9 0 1.7-.6 1.7-1.7 0-1-.8-1.7-1.7-1.7-1 0-1.7.6-1.7 1.7zM66.7.8c-.7 0-1.2.5-1.2 1.3s.5 1.4 1.2 1.3c.6 0 1.2-.5 1.2-1.3S67.3.8 66.7.8zm0 .4c.4 0 .7.1.7.6 0 .3-.2.4-.4.4l.4.9H67l-.4-.8h-.2V3H66V1.2h.7zm0 .3h-.3V2h.3c.2 0 .3 0 .3-.3 0-.2-.2-.2-.3-.2z'/%3E%3Cpath fill='%231d1d1b' fill-rule='nonzero' d='M11.4.5h51.9v10.9H11.4z'/%3E%3Cpath fill='%23e20714' d='M.3.5H11v10.9H.3z'/%3E%3Cpath fill='%23fefefe' d='M10.6 11H.6V1h10v10zM4.1 7.5h-3v3.1h3v-3zm6.2 0H7.2v3.1h3v-3zm37.1 2.1h-2.6v-.4h.3c.3 0 .5 0 .6-.2V3.4a3 3 0 00-.3-.4l-.5-.2h-.5v-.5h2l4.2 5.2V3.7l-.1-.8-.5-.2h-.4v-.4h2.7v.4h-.4c-.3 0-.4.1-.5.3l-.1.7v6h-.4l-4.5-5.5v4.1l.1.8.6.1h.3v.4zm-23.7-7h-.4c-.2 0-.4.2-.5.3v4.8l.2.8.6.4.8.2c.5 0 .9-.1 1.2-.3.3-.2.6-.4.7-.7l.2-1.6V3.6l-.1-.7c-.1-.2-.3-.2-.5-.2h-.4v-.4h2.6v.4h-.3c-.3 0-.4 0-.6.3V6.6c0 .7-.1 1.3-.3 1.7-.1.4-.4.7-.8 1a3 3 0 01-1.7.5c-.8 0-1.4-.2-1.8-.5-.4-.3-.7-.6-1-1.1a6 6 0 010-1.8V3.6c0-.5-.2-.7-.2-.8l-.5-.1h-.4v-.4h3.2v.4zm18.3.1h-.3c-.3 0-.4.1-.5.2l-.1.8V9l.2.1.4.1h.3v.4H39v-.4h.3c.3 0 .4 0 .6-.2V3.7 3l-.2-.2a.8.8 0 00-.4 0H39v-.5H42v.4zm-25.3 7h-3.2v-.5h.4c.3 0 .5 0 .6-.2V3.7v-.8l-.6-.2h-.4v-.4h2.7l1.5.2 1 .7.3 1.2a2 2 0 01-.5 1.5c-.4.4-1 .6-1.7.6h-.6l-.5-.2v2c0 .5.1.7.2.7 0 .2.2.2.5.2h.3v.4zm39.2 0h-2.4v-.4h.1l.5-.2.6-1 2.5-6h.4l2.4 6 .5 1 .6.1v.4h-2.9v-.4h.6l.1-.3c0-.1 0-.4-.2-.7l-.4-1h-2.5A937 937 0 0055 9l.1.2.7.1v.4zm-22.8 0h-3.2v-.5h.4c.2 0 .4 0 .5-.2l.1-.7V3.7l-.1-.8-.5-.2h-.4v-.4h2.6c.8 0 1.4 0 1.7.2.4.1.7.3 1 .6.2.3.4.7.4 1.2 0 .4-.2.8-.5 1.2-.3.3-.7.5-1.2.6l1.4 2 .8.9.9.2v.4h-2l-2.3-3.3h-.4a3.2 3.2 0 01-.2 0v2l.1.7c.1.2.3.2.5.2h.4v.4zM7 4.3h-3v3.1h3v-3zm51 2.3l-1-2.5-1 2.5h2zM16.3 3h-.6v2.8a5.5 5.5 0 00.8.1c.3 0 .6-.1.8-.4.2-.2.4-.6.4-1 0-.3 0-.6-.2-.8-.1-.3-.3-.4-.5-.6l-.7-.1zm16.5 0a4 4 0 00-.7 0v2.8h.2c.6 0 1-.2 1.4-.4.3-.3.5-.7.5-1 0-.5-.1-.8-.4-1-.3-.3-.6-.5-1-.5zM4.1 1.2h-3v3.1h3V1.3zm6.1 0h-3v3.1h3V1.3z'/%3E%3C/svg%3E");width: 128px;height: 47px;display: block;background-repeat: no-repeat;margin: 30px 0 0 10px;}
+.logo-tass{width: 54px;height: 54px;display: block;background-repeat: no-repeat;/*! background-color: #fff; */margin-top: 20px;background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' fill-rule='evenodd' clip-rule='evenodd' stroke-linejoin='round' stroke-miterlimit='1.4'%3E%3Cpath d='M60 60H0V0h60v60zM15.5 40.872l1.858-3.222H3.757v3.222h4.766v10.622h3.407V40.872h3.57zm10.496-3.222H19.63l-1.86 3.222h8.227c.405 0 .644.24.644.644v1.473h-5.337c-2.449 0-4.252 1.804-4.252 4.252 0 2.45 1.803 4.253 4.252 4.253h8.742v-9.978c0-2.337-1.601-3.866-4.05-3.866zm16.243 3.222l1.858-3.222h-7.895c-2.467 0-4.067 1.529-4.067 3.866v6.131c0 2.356 1.601 3.847 4.067 3.847h7.049v-3.221h-7.049c-.386 0-.662-.221-.662-.626v-6.131c0-.404.276-.644.662-.644h6.037zm12.634 0l1.86-3.222h-7.896c-2.465 0-4.067 1.529-4.067 3.866v6.131c0 2.356 1.602 3.847 4.067 3.847h7.048v-3.221h-7.048c-.387 0-.662-.221-.662-.626v-6.131c0-.404.275-.644.662-.644h6.036zM26.4 45.6V48h-4.812c-.687 0-1.188-.502-1.188-1.19 0-.707.501-1.21 1.188-1.21H26.4z' fill='%23fff' fill-rule='nonzero'%3E%3C/path%3E%3C/svg%3E");background-size: 100% 100%;}
 
-h1{max-width: 300px;}
-
-#section-1{  text-align: center;display: flex;flex-direction: column;flex-wrap: nowrap;justify-content: center;align-items: center;align-content: stretch;}
-
-
-.btn-down{width: 50px; height: 50px; background-color: #fff}
+.btn-down{width: 50px; height: 50px; margin: 0 auto;background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 14 17'%3E%3Cpath fill='%23FFF' d='M7 0c-.4 0-.7.3-.7.7v14.1l-5-5.4a.7.7 0 00-1 0c-.4.3-.4.7-.1 1L6 16.6a1.4 1.4 0 002 0l5.8-6.2c.3-.3.3-.7 0-1a.7.7 0 00-1 0L7.7 15V.7C7.7.3 7.4 0 7 0z'/%3E%3C/svg%3E");background-repeat: no-repeat;background-position: center;background-size: 18px 18px;margin-top: 18px;animation: down 1.2s infinite;cursor: pointer;}
+.btn-down:hover{animation: down 1.2s alternate}
 .btn-next{width: 50px; height: 50px; background-color: #fff}
-.soc-btns{width: 150px; height: 50px; background-color: #fff}
+.soc-btns{width: 152px; height: 44px; border: solid 1px #fff;margin-bottom: 39px;}
 
-
-.dog-item-inner{transform: scale(0)}
 
 
 #section-2 {text-align: center;display: flex;flex-direction: column;flex-wrap: nowrap;justify-content: center;align-items: center; align-content: stretch;}
-#section-2 p{max-width: 500px}
+#section-2 p{max-width: 527px;   color: #ffffff;font-family: "Akrobat-SemiBold"; font-size: 17px;font-weight: 400; line-height: 23px; letter-spacing: 0.03em; text-align:left;margin-bottom: 23px;}
+#section-3{background-color: #dedede87;}
 
-#section-3{background-color: #dedede}
+.dog-item-inner{transform: scale(0)}
+.dog-item-outher .header{transform: scale(1,0);opacity: 0}
 
 
-
-
+@keyframes down{
+    0% {transform: translateY(0)}
+    50% {transform: translateY(7px)}
+}
 
 
 
