--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ h3.offset-up{position: relative;pointer-events: none;z-index: 1;margin: -100px a
 .btn-next{width: 50px; height: 25px; margin: 0px auto 55px auto;border-radius: 50%;background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 17 14'%3E%3Cpath fill='%234C4C4C' d='M0 7c0 .4.3.7.7.7h14.1l-5.4 5c-.3.4-.3.8 0 1 .3.4.7.4 1 .1L16.6 8a1.4 1.4 0 000-2L10.4.2a.7.7 0 00-1 0c-.3.3-.3.7 0 1L15 6.3H.7c-.4 0-.7.3-.7.7z'/%3E%3C/svg%3E");background-repeat: no-repeat;background-position: center;background-size: 16px 16px;cursor: pointer;}
 .soc-btns{width: 164px; height: 44px; margin: 0 auto 40px auto;}
 .soc-btns .ya-share2__badge{transition:.3s;background-color: transparent!important;border: solid 1px #fff;border-radius: 50%;padding: 6px;margin: 0 7px;}
-
+#shadow{position: fixed;width: 100vw;height: 100vh;background-color: rgba(0, 0, 0, 1);top: 0;left: 0;z-index: 100;}
 #wrap{transition: all ease-in-out 1.2s;position: fixed;  height: auto; width: 100vw; overflow-y: hidden;/*! -webkit-overflow-scrolling: touch; */top: 0;left: 0;}
 #section1-h1{width: 272px;height: 55px;margin-bottom: -4px;margin-top: 70px;}
 #section-1{text-align: center;display: flex;flex-direction: column;flex-wrap: nowrap;justify-content: space-between;align-items: center;align-content: stretch;}
@@ -160,7 +160,7 @@ body[data-slide="6"] #dogs{transform: translateY(calc((((45vw / 1.714285) + ((10
 
 .dog-item.active{overflow-x:hidden;overflow-y:auto;background-color: rgba(0, 0, 0, 1);/*! margin: 0 !important; */height: 100vh;z-index: 5 !important;}
 .dog-item.active .img-main{transform: scale(0.838) translateX(0px) translateY(109px);transform-origin: 50% 0%;}
-.dog-item.active .dog-item-outher h2{transform: translate(-43%,155%) scale(1.33);letter-spacing: 0.04em;line-height: 1.15em;}
+.dog-item.active .dog-item-outher h2{transform: translate(-50%,320%) scale(1.33);letter-spacing: 0.04em;line-height: 1.15em;}
 .dog-item.active .dog-item-outher .header {transform: translateY(0%) scale(1,1); opacity: 1;}
 .dog-item.active .dog-item-inner{transform: translateY(0%) scale(1,1);opacity: 1;}
 
@@ -175,7 +175,7 @@ body[data-slide="6"] #dogs{transform: translateY(calc((((45vw / 1.714285) + ((10
 .dog-item-outher .header{transform: translateY(-100%) scale(1,0);opacity: 0;transition: all ease-in-out 1s;position: absolute;top: 0;}
 .dog-item-outher .img-main{width: 100%; transform: scale(0.45) translateX(-20%) translateY(0%);transform-origin: 50% 0%;transition: all ease-in-out 1s;max-width: 2560px;position: relative;}
 .dog-item-outher .img-main img{width: 100%;cursor: pointer;}
-.dog-item-outher h2{color: #ffffff; font-size: 39px; font-weight: 700; line-height: 1.03em;  text-transform: uppercase;letter-spacing: 0.02em;position: absolute;z-index: 3;top: 14.7%;left: 50%;width: 100%;max-width: 450px;cursor: pointer;transition: all ease-in-out 1s;font-family: 'DrukTextWideCyr-Bold';}
+.dog-item-outher h2{color: #ffffff; font-size: 2.868vw; font-weight: 700; line-height: 1.03em;  text-transform: uppercase;letter-spacing: 0.02em;position: absolute;z-index: 3;top: 15%;left: 50%;width: 100%;cursor: pointer;transition: all ease-in-out 1s;font-family: 'DrukTextWideCyr-Bold';max-width: 33.088vw;}
 
 
 .dog-item-inner{transform: translateY(15%) scale(1,0);opacity: 0;transition: all ease-in-out 1s;/*! padding-top: calc(95vw / 1.714285); */}
