--- a/css/style.css
+++ b/css/style.css
@@ -83,21 +83,8 @@ ma{box-sizing: border-box}
 
 body{margin:0; background-color:#000;color: #fff;/*! background-image: url(../img/bg1.jpg); *//*! background-size: auto 100vh; *//*! background-repeat: no-repeat; *//*! background-position: 0 0; *//*! background-attachment: fixed; */overflow: hidden;/*! transition: all 1.2s ease-in-out; */}
 
-#bg{background-image: url(../img/bg1.jpg);background-size: auto 100vh;background-repeat: no-repeat;background-position: 0 0;background-attachment: fixed;transition: all 1.2s ease-in-out;position: absolute;width: 300vw;height: 100vh;will-change: transform;}
-
-
-.col-12{width:100%}
-.col-11{width:91.66666%}
-.col-10{width:83.33333%}
-.col-9{width:75%}
-.col-8{width:66.66666%}
-.col-7{width:58.33333%}
-.col-6{width:50%}
-.col-5{width:41.66666%}
-.col-4{width:33.33333%}
-.col-3{width:25%}
-.col-2{width:16.66666%}
-.col-1{width:8.33333%}
+#bg{background-image: url(../img/bg1.jpg);background-size: auto 100vh;background-repeat: no-repeat;background-position: 0 0;background-attachment: fixed;transition: all 1.2s ease-in-out;position: absolute;width: 300vw;height: 100vh;}
+#menu{border-top: #fff solid 2px; border-bottom: #fff solid 2px; width: 26px; height: 6px;margin-top: 41px;opacity: 0;pointer-events: none;transition: 1s;margin-right: 90px;}
 
 
 section{height: 100vh;width: 100%;position: relative;}
@@ -106,7 +93,7 @@ h1{max-width: 520px; font-family: 'DrukTextWideCyr-Bold', Arial;font-size: 55px;
 h2,h3,h4,h5{margin: 0;}
 h3.offset-up{position: relative;pointer-events: none;z-index: 1;margin: -100px auto 92px auto !important;}
 .img-wrap img{width: 100%}
-.header{margin: 0 auto; width: 100%;  display:flex; justify-content: space-between;}
+.header{margin: 0 auto; width: 100%;  display:flex; justify-content: space-between;position: relative;transform: translateY(-100px);opacity: 0;transition: 0.4s ease-in-out;}
 .logo-dogchow{ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill-rule='evenodd' stroke-linejoin='round' stroke-miterlimit='2' clip-rule='evenodd' viewBox='0 0 129 41'%3E%3Cpath fill='%23fefefe' d='M95 19.5c-2.6 0-7 1.4-7 10.7 0 4 .8 7 2.6 8.8a6.1 6.1 0 004.4 1.8c3.5 0 7.2-2.8 7.2-10.6 0-4.1-.9-7.1-2.6-8.9a6.2 6.2 0 00-4.6-1.8zM33.5 30.2c0 7.8-3.7 10.6-7.2 10.6-1.2 0-3-.3-4.5-1.8-1.7-1.8-2.6-4.7-2.6-8.8 0-9.3 4.5-10.7 7.1-10.7 1.3 0 3 .3 4.5 1.8 1.8 1.8 2.7 4.8 2.7 9zM5.4 40.7H.3v-2.4l1.8-.4V19l-1.8-.4v-2.5h7.9c2.5 0 4.5.8 6 2.4 2.6 2.6 3.2 6.8 3.2 9.8 0 4.2-1.1 9.5-6.2 11.7a10 10 0 01-3.7.7h-.1l-1.9-.6-.1.6zM68 36.8c-1 .3-2.2.6-3.3.6-.7 0-1.5-.2-2.2-.6-3.5-2-4-6.7-4-8.6 0-1.8.4-6.2 3.4-8.1a4 4 0 012.2-.7c.6 0 1.3 0 2 .2l.8 3.2 2.1-.4v-5l-.2-.2c-.2 0-2.2-1.1-4.7-1.1-3 0-5.6 1.2-7.4 3.6a14.5 14.5 0 00-2.4 8.6c0 4.1 1.1 9.5 6.6 11.7 1.2.5 2.5.7 3.9.7l1.8-.5a206.4 206.4 0 012.6-.9h.3l-.8-2.6-.7.1zm7.8 4h-5v-2.3l1.5-.3v-16l-1.6-.3v-2.2h5v8.5H82v-8.5h5v2.2l-1.6.3v16l1.6.3v2.2h-5V31h-6.1v9.8zm-31-.1h-.2c-.9 0-4-.2-6.3-2.6-1.8-1.9-2.7-4.6-2.7-8 0-3.7.9-6.5 2.7-8.3a8 8 0 015.7-2.2c2.3 0 4 1 4 1l.3.1v4.4l-2 .4-.6-2.8a13 13 0 00-1.7-.2c-1.9 0-4.7 2-4.7 7.5 0 3.4 1.2 5.3 2.2 6.3.9 1 2 1.4 3 1.4.2 0 .6 0 1.6-.3v-6.7l-2-.3V28h5.5v10.6l-4.9 2zm62.3-21l2.4 13.7L112 24l-.5-1.8-1.8-.4v-2.2h4.8l3.8 14.6 2.9-14.6h4.2v2.2l-1.7.4-3.7 18.5h-3.4L113.4 29l-2.9 11.6h-3L104 22.2l-1.6-.4v-2.2h4.8zM95 37.8c2 0 3.3-2.7 3.3-7.8 0-3.5-.6-5.9-1.7-7-.5-.5-1-.7-1.7-.7-2 0-3.3 2.9-3.3 7.7 0 3.6.6 6 1.6 7.1.5.5 1 .7 1.7.7zM26.2 22.4c.6 0 1.2.2 1.7.7 1 1.1 1.6 3.6 1.6 7 0 5-1.2 7.8-3.3 7.8-.7 0-1.2-.2-1.7-.7-1-1-1.6-3.5-1.6-7 0-4.9 1.2-7.8 3.3-7.8zM9.8 37c-.7.4-1.5.7-2.2.7-.6 0-1.1-.2-1.5-.3V19.2h2c.7 0 1.4.2 2 .7 2.7 1.9 3 6.5 3 8.3 0 2.5-.5 6.8-3.3 8.7zm116.8-16.7c0 .8.6 1.2 1.2 1.2s1.1-.4 1.1-1.2c0-.7-.5-1.1-1.1-1.1-.6 0-1.2.4-1.2 1.1zm1.2-.8c-.5 0-.8.3-.8.8 0 .6.3 1 .8 1 .4 0 .8-.4.8-1 0-.5-.4-.8-.8-.8zm0 .2c.3 0 .5.1.5.4 0 .2-.1.3-.3.3l.3.6h-.3l-.3-.6h-.1v.6h-.3v-1.3h.5zm0 .2h-.2v.3h.2l.2-.1c0-.2-.1-.2-.2-.2zm-64.2-8H0V.1h63.6v11.5zM65 2c0 1.1.8 1.7 1.7 1.7.9 0 1.7-.6 1.7-1.7 0-1-.8-1.7-1.7-1.7-1 0-1.7.6-1.7 1.7zM66.7.8c-.7 0-1.2.5-1.2 1.3s.5 1.4 1.2 1.3c.6 0 1.2-.5 1.2-1.3S67.3.8 66.7.8zm0 .4c.4 0 .7.1.7.6 0 .3-.2.4-.4.4l.4.9H67l-.4-.8h-.2V3H66V1.2h.7zm0 .3h-.3V2h.3c.2 0 .3 0 .3-.3 0-.2-.2-.2-.3-.2z'/%3E%3Cpath fill='%231d1d1b' fill-rule='nonzero' d='M11.4.5h51.9v10.9H11.4z'/%3E%3Cpath fill='%23e20714' d='M.3.5H11v10.9H.3z'/%3E%3Cpath fill='%23fefefe' d='M10.6 11H.6V1h10v10zM4.1 7.5h-3v3.1h3v-3zm6.2 0H7.2v3.1h3v-3zm37.1 2.1h-2.6v-.4h.3c.3 0 .5 0 .6-.2V3.4a3 3 0 00-.3-.4l-.5-.2h-.5v-.5h2l4.2 5.2V3.7l-.1-.8-.5-.2h-.4v-.4h2.7v.4h-.4c-.3 0-.4.1-.5.3l-.1.7v6h-.4l-4.5-5.5v4.1l.1.8.6.1h.3v.4zm-23.7-7h-.4c-.2 0-.4.2-.5.3v4.8l.2.8.6.4.8.2c.5 0 .9-.1 1.2-.3.3-.2.6-.4.7-.7l.2-1.6V3.6l-.1-.7c-.1-.2-.3-.2-.5-.2h-.4v-.4h2.6v.4h-.3c-.3 0-.4 0-.6.3V6.6c0 .7-.1 1.3-.3 1.7-.1.4-.4.7-.8 1a3 3 0 01-1.7.5c-.8 0-1.4-.2-1.8-.5-.4-.3-.7-.6-1-1.1a6 6 0 010-1.8V3.6c0-.5-.2-.7-.2-.8l-.5-.1h-.4v-.4h3.2v.4zm18.3.1h-.3c-.3 0-.4.1-.5.2l-.1.8V9l.2.1.4.1h.3v.4H39v-.4h.3c.3 0 .4 0 .6-.2V3.7 3l-.2-.2a.8.8 0 00-.4 0H39v-.5H42v.4zm-25.3 7h-3.2v-.5h.4c.3 0 .5 0 .6-.2V3.7v-.8l-.6-.2h-.4v-.4h2.7l1.5.2 1 .7.3 1.2a2 2 0 01-.5 1.5c-.4.4-1 .6-1.7.6h-.6l-.5-.2v2c0 .5.1.7.2.7 0 .2.2.2.5.2h.3v.4zm39.2 0h-2.4v-.4h.1l.5-.2.6-1 2.5-6h.4l2.4 6 .5 1 .6.1v.4h-2.9v-.4h.6l.1-.3c0-.1 0-.4-.2-.7l-.4-1h-2.5A937 937 0 0055 9l.1.2.7.1v.4zm-22.8 0h-3.2v-.5h.4c.2 0 .4 0 .5-.2l.1-.7V3.7l-.1-.8-.5-.2h-.4v-.4h2.6c.8 0 1.4 0 1.7.2.4.1.7.3 1 .6.2.3.4.7.4 1.2 0 .4-.2.8-.5 1.2-.3.3-.7.5-1.2.6l1.4 2 .8.9.9.2v.4h-2l-2.3-3.3h-.4a3.2 3.2 0 01-.2 0v2l.1.7c.1.2.3.2.5.2h.4v.4zM7 4.3h-3v3.1h3v-3zm51 2.3l-1-2.5-1 2.5h2zM16.3 3h-.6v2.8a5.5 5.5 0 00.8.1c.3 0 .6-.1.8-.4.2-.2.4-.6.4-1 0-.3 0-.6-.2-.8-.1-.3-.3-.4-.5-.6l-.7-.1zm16.5 0a4 4 0 00-.7 0v2.8h.2c.6 0 1-.2 1.4-.4.3-.3.5-.7.5-1 0-.5-.1-.8-.4-1-.3-.3-.6-.5-1-.5zM4.1 1.2h-3v3.1h3V1.3zm6.1 0h-3v3.1h3V1.3z'/%3E%3C/svg%3E");width: 128px;height: 47px;display: block;background-repeat: no-repeat;margin: 30px 0 0 30px;}
 .logo-tass{width: 54px;height: 54px;display: block;background-repeat: no-repeat;/*! background-color: #fff; */margin: 20px 17px 0 0;background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' fill-rule='evenodd' clip-rule='evenodd' stroke-linejoin='round' stroke-miterlimit='1.4'%3E%3Cpath d='M60 60H0V0h60v60zM15.5 40.872l1.858-3.222H3.757v3.222h4.766v10.622h3.407V40.872h3.57zm10.496-3.222H19.63l-1.86 3.222h8.227c.405 0 .644.24.644.644v1.473h-5.337c-2.449 0-4.252 1.804-4.252 4.252 0 2.45 1.803 4.253 4.252 4.253h8.742v-9.978c0-2.337-1.601-3.866-4.05-3.866zm16.243 3.222l1.858-3.222h-7.895c-2.467 0-4.067 1.529-4.067 3.866v6.131c0 2.356 1.601 3.847 4.067 3.847h7.049v-3.221h-7.049c-.386 0-.662-.221-.662-.626v-6.131c0-.404.276-.644.662-.644h6.037zm12.634 0l1.86-3.222h-7.896c-2.465 0-4.067 1.529-4.067 3.866v6.131c0 2.356 1.602 3.847 4.067 3.847h7.048v-3.221h-7.048c-.387 0-.662-.221-.662-.626v-6.131c0-.404.275-.644.662-.644h6.036zM26.4 45.6V48h-4.812c-.687 0-1.188-.502-1.188-1.19 0-.707.501-1.21 1.188-1.21H26.4z' fill='%23fff' fill-rule='nonzero'%3E%3C/path%3E%3C/svg%3E");background-size: 100% 100%;}
 .btn-down{width: 50px; height: 50px; margin: 0 auto;background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 14 17'%3E%3Cpath fill='%23FFF' d='M7 0c-.4 0-.7.3-.7.7v14.1l-5-5.4a.7.7 0 00-1 0c-.4.3-.4.7-.1 1L6 16.6a1.4 1.4 0 002 0l5.8-6.2c.3-.3.3-.7 0-1a.7.7 0 00-1 0L7.7 15V.7C7.7.3 7.4 0 7 0z'/%3E%3C/svg%3E");background-repeat: no-repeat;background-position: center;background-size: 18px 18px;margin-top: 18px;animation: down 1.2s infinite;cursor: pointer;}
@@ -114,25 +101,37 @@ h3.offset-up{position: relative;pointer-events: none;z-index: 1;margin: -100px a
 .btn-next{width: 50px; height: 25px; margin: 0px auto 55px auto;border-radius: 50%;background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 17 14'%3E%3Cpath fill='%234C4C4C' d='M0 7c0 .4.3.7.7.7h14.1l-5.4 5c-.3.4-.3.8 0 1 .3.4.7.4 1 .1L16.6 8a1.4 1.4 0 000-2L10.4.2a.7.7 0 00-1 0c-.3.3-.3.7 0 1L15 6.3H.7c-.4 0-.7.3-.7.7z'/%3E%3C/svg%3E");background-repeat: no-repeat;background-position: center;background-size: 16px 16px;cursor: pointer;}
 .soc-btns{width: 164px; height: 44px; margin: 0 auto 40px auto;}
 .soc-btns .ya-share2__badge{transition:.3s;background-color: transparent!important;border: solid 1px #fff;border-radius: 50%;padding: 6px;margin: 0 7px;}
-#shadow{position: fixed;width: 100vw;height: 100vh;background-color: rgba(0, 0, 0, 1);top: 0;left: 0;z-index: 100;}
-#wrap{transition: all ease-in-out 1.2s;position: fixed;  height: auto; width: 100vw; overflow-y: hidden;/*! -webkit-overflow-scrolling: touch; */top: 0;left: 0;}
-#section1-h1{width: 272px;height: 55px;margin-bottom: -4px;margin-top: 70px;}
+#shadow{position: fixed;width: 100vw;height: 100vh;background-color: rgb(15, 15, 15);top: 0;left: 0;z-index: 100;display: flex;justify-content: center;align-items: center;}
+#shadow:after{content:"« »";font-family: 'DrukTextWideCyr-Bold';color: #121212;text-align: center;font-size: 12vw;line-height: 8vw;}
+#wrap{position: fixed;  height: auto; width: 100vw; overflow-y: hidden;/*! -webkit-overflow-scrolling: touch; */top: 0;left: 0;transition: all ease-in-out 1.2s;}
+
+
+#section1-h1{width: 272px;height: 55px;margin-bottom: -4px;margin-top: 19vh;}
 #section-1{text-align: center;display: flex;flex-direction: column;flex-wrap: nowrap;justify-content: space-between;align-items: center;align-content: stretch;}
+#section-1:before{content:""}
 #section-2 {text-align: center;display: flex;flex-direction: column;flex-wrap: nowrap;justify-content: center;align-items: center; align-content: stretch;/*! background-color: #cccccc3d; */}
 #section-2 p{max-width: 527px; color: #ffffff;font-family: "Akrobat-SemiBold"; font-size: 17px;font-weight: 400; line-height: 23px; letter-spacing: 0.03em; text-align:left;margin-bottom: 23px;}
 #section-3{overflow: hidden;} 
+#dogs:after{content:"";transition: all ease-in-out 1.2s;position:absolute;width: 100%;height: 100%;background-color: rgba(0, 0, 0, 0);left: 0;top: 0;z-index: 4;pointer-events: none;}
 
-body[data-slide="1"] #wrap {transform: translateY(0)}
-body[data-slide="2"] #wrap {transform: translateY(-100vh)}
+.progress-circle{width: 92px;height: 92px; position: fixed; right: 11px;bottom: 11px;z-index: 3;opacity: 0;pointer-events: none;transition: opacity 1.2s;}
+.progress-circle .bar{stroke-dashoffset: 145.5;stroke-dasharray: 145.5;}
+
+body.inner .progress-circle{opacity: 1;}
+body.inner .header{transform: translateY(0px);opacity: 1;z-index: 1;}
+body.inner #menu{opacity: 1;pointer-events: initial;cursor: pointer;}
+body.inner #dogs:after{background-color: rgba(0, 0, 0, 1);}
+body[data-slide="1"] #wrap {transform: translateY(0);}
+body[data-slide="2"] #wrap {transform: translateY(-100vh);}
 body[data-slide="3"] #wrap,
 body[data-slide="4"] #wrap,
 body[data-slide="5"] #wrap,
-body[data-slide="6"] #wrap{transform: translateY(-200vh)}
+body[data-slide="6"] #wrap{transform: translateY(-200vh);}
 
 
-body[data-slide="1"] #bg{transform: translateX(0%)}
+body[data-slide="1"] #bg{transform: translateX(0%);}
 body[data-slide="2"] #bg{transform: translateX(-29.2%);}
-
+ 
 
 body[data-slide="3"] #bg,
 body[data-slide="4"] #bg,
@@ -140,37 +139,51 @@ body[data-slide="5"] #bg,
 body[data-slide="6"] #bg{transform: translateX(-43.3%);}
 
 
-body[data-slide="3"] #dogs{}
+
 body[data-slide="4"] #dogs{transform: translateY(calc((((45vw / 1.714285) + ((100vh - (45vw / 1.714285)) / 2)) * -1) + 40px));}
 body[data-slide="5"] #dogs{transform: translateY(calc((((45vw / 1.714285) + ((100vh - (45vw / 1.714285)) / 2)) * -2) + 80px));}
 body[data-slide="6"] #dogs{transform: translateY(calc((((45vw / 1.714285) + ((100vh - (45vw / 1.714285)) / 2)) * -3) + 120px));}
+body[data-slide="1"] .header{transform:translateY(0);opacity: 1;}
+
+body[data-slide="3"] .dog-item[data-id="1"],
+body[data-slide="4"] .dog-item[data-id="2"],
+body[data-slide="5"] .dog-item[data-id="3"],
+body[data-slide="6"] .dog-item[data-id="4"]{z-index:5}
 
 
 #dogs{width: 100%; height: calc((100vw / 1.714285) * 4); overflow: hidden;transition: transform .7s ease-in-out;position: relative;height: calc(((100vw / 1.714285) * 4) + ((100vh - (45vw / 1.714285)) * 4));}
-.dog-item{transition: all ease-in-out 1s;background-color: rgba(0, 0, 0, 0);height: calc(100vw / 1.714285);/*! padding: 20vh 0; */position: absolute;top: 0;left: 0;width: 100%;height: calc(45vw / 1.714285);overflow: hidden;}
-.dog-item[data-id="1"]{z-index: 4;margin-top: calc((100vh - (45vw / 1.714285)) / 2);}
+.dog-item{transition: all ease-in-out 1s;height: calc(100vw / 1.714285); position: absolute;top: 0;left: 0;width: 100%;height: calc(45vw / 1.714285);overflow: hidden;}
+.dog-item[data-id="1"]{margin-top: calc((100vh - (45vw / 1.714285)) / 2);}
 
 .dog-item.active[data-id="1"]{margin-top: 0}
 .dog-item.active[data-id="2"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 1) - 40px);}
-
-
-
 .dog-item.active[data-id="3"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 2) + (((100vh - (45vw / 1.714285)) / 2) - 80px)); }
-.dog-item.active[data-id="4"]{ margin-top: calc((((100vh - (45vw / 1.714285)) / 2) * 2) + ((45vw / 1.714285) * 3) + (((100vh - (45vw / 1.714285)) / 2) - 120px));}
+.dog-item.active[data-id="4"]{margin-top: calc((((100vh - (45vw / 1.714285)) / 2) * 2) + ((45vw / 1.714285) * 3) + (((100vh - (45vw / 1.714285)) / 2) - 120px));}
 
-.dog-item.active{overflow-x:hidden;overflow-y:auto;background-color: rgba(0, 0, 0, 1);/*! margin: 0 !important; */height: 100vh;z-index: 5 !important;}
-.dog-item.active .img-main{transform: scale(0.838) translateX(0px) translateY(109px);transform-origin: 50% 0%;}
-.dog-item.active .dog-item-outher h2{transform: translate(-50%,320%) scale(1.33);letter-spacing: 0.04em;line-height: 1.15em;}
+.dog-item.active{overflow-x:hidden;overflow-y:auto;height: 100vh;z-index: 5 !important;-webkit-overflow-scrolling: touch;-webkit-transform: translateZ(0px);-webkit-transform: translate3d(0,0,0);-webkit-perspective: 1000;scroll-behavior: smooth;/*! background-color: rgba(0, 0, 0, 1); */}
+.dog-item.active .img-main{transform: scale(0.838) translateX(0px) translateY(109px);}
+.dog-item.active .dog-item-outher h2{transform: translate(-50%,320%) scale(1.33);letter-spacing: 0.04em;}
 .dog-item.active .dog-item-outher .header {transform: translateY(0%) scale(1,1); opacity: 1;}
 .dog-item.active .dog-item-inner{transform: translateY(0%) scale(1,1);opacity: 1;}
 
+
+
+body.closed .dog-item.active .dog-item-outher h2{transition: none; transform: none}
+body.closed .dog-item.active .dog-item-outher .img-main{transition: none; transform: scale(0.45) translateX(-20%) translateY(0%);}
+body.closed .dog-item.active .dog-item-inner{opacity: 0;transition: opacity .4s; }
+body.closed .dog-item[data-id="2"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 1) + ((((100vh - (45vw / 1.714285)) / 2) * 1) - 40px));}
+body.closed .dog-item[data-id="3"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 2) + ((((100vh - (45vw / 1.714285)) / 2) * 2) - 80px));}
+body.closed .dog-item[data-id="4"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 3) + ((((100vh - (45vw / 1.714285)) / 2) * 3) - 120px));}
+body.closed #dogs::after{opacity: 0}
+
 .dog-item.clear .dog-item-inner{transition: none;transform: translateY(0%) scale(1,1);}
 .dog-item.clear {height: 100vh;overflow-x:hidden;overflow-y:auto}
-.dog-item[data-id="2"]{z-index: 3;margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 1) + ((((100vh - (45vw / 1.714285)) / 2) * 1) - 40px));}
-.dog-item[data-id="3"]{z-index: 2;margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 2) + ((((100vh - (45vw / 1.714285)) / 2) * 2) - 80px));}
-.dog-item[data-id="4"]{z-index: 1;margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 3) + ((((100vh - (45vw / 1.714285)) / 2) * 3) - 120px));}
 
+.dog-item[data-id="2"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 1) + ((((100vh - (45vw / 1.714285)) / 2) * 1) - 40px));}
+.dog-item[data-id="3"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 2) + ((((100vh - (45vw / 1.714285)) / 2) * 2) - 80px));}
+.dog-item[data-id="4"]{margin-top: calc(((100vh - (45vw / 1.714285)) / 2) + ((45vw / 1.714285) * 3) + ((((100vh - (45vw / 1.714285)) / 2) * 3) - 120px));}
 
+.no-transitions{transition: none!important}
 .dog-item-outher {position: relative;}
 .dog-item-outher .header{transform: translateY(-100%) scale(1,0);opacity: 0;transition: all ease-in-out 1s;position: absolute;top: 0;}
 .dog-item-outher .img-main{width: 100%; transform: scale(0.45) translateX(-20%) translateY(0%);transform-origin: 50% 0%;transition: all ease-in-out 1s;max-width: 2560px;position: relative;}
@@ -194,9 +207,9 @@ blockquote p{font-size: 25px;text-align: center; letter-spacing: 0.03em;font-fam
 
 .slider-white-title{text-transformte;text-transform: uppercase;font-size: 22px;font-weight: 900;text-align: center;font-family: 'Akrobat-Bold';letter-spacing: 0.021em;margin-bottom: 25px;}
 .slider-white{background-color: #fff;color:#000;width: 100%; max-width: 875px;margin: 0 auto;border-radius: 5px;margin-bottom: 75px;position: relative;padding: 2% 0;}
-.slider-white-item{display: flex;justify-content: space-between;padding: 1% 6% 1% 3%;align-items: center;}
+.slider-white-item{display: flex;justify-content: space-between;padding: 1% 8% 1% 3%;align-items: center;}
 .slider-white-item .text-wrap{width: 48%;}
-.slider-white-item .img-wrap{padding: 0 11%;width:46%;}
+.slider-white-item .img-wrap{padding: 0 11%;width:25%;}
 .slider-white-item .img-wrap img{width: 100%}
 .slider-white-item h5{font-size: 40px;font-stretch: semi-expanded;font-weight: 700;line-height: 1.1em;text-transform: uppercase;letter-spacing: -0.025em;font-family: 'DrukTextWideCyr-Bold';margin-bottom: 15px;}
 .slider-white .lSAction{display: none}
